<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Safety Check</string>
    <string name="NewForm">New Form</string>
    <string name= "ViewForms">View Forms</string>
    <string name="action_settings">Settings</string>
    <string name="FormTitle">Form Title</string>
    <string name="IndoorUnit">Indoor Unit</string>
    <string name="Make">Make</string>
    <string name="Model">Model</string>
    <string name="SerialNumber">Serial Number</string>
    <string name="OutdoorUnit">Outdoor Unit</string>
    <string name="COReading">CO Reading</string>
	<string name="SupplyAir">Supply Air</string>
	<string name="FluGasses">Flu Gasses</string>
	<string name="TemperatureRise">Temperature Rise</string>
	<string name="IndoorRise">Indoor Unit</string>
	<string name="OutdoorRise">Outdoor Unit</string>
	<string name="OperatingRange">Operating Range</string>
	<string name="IndoorHigh">Indoor High</string>
	<string name="IndoorLow">Indoor Low</string>
	<string name="OutdoorHigh">Outdoor High</string>
	<string name="OutdoorLow">Outdoor Low</string>
	<string name="GasPressure">Gas Pressure</string>
	<string name="GP">(only needed for Natural Gas and LP units)</string>
	<string name="FilterSize">Filter Size</string>
	<string name="Length">Length</string>
	<string name="Width">Width</string>
	<string name="Height">Height</string>
	<string name="Save">Save</string>
	<string name="FormListFile">formList.xml</string>
	<string name = "Empty"></string>
	<string name = "MainMenu">Main Menu</string>
	<string name="SampleFormFile">ClassDemo1399399889.xml</string>
	
	<color name="blue">#0000FF</color>
	<color name="white">#FFFFFF</color>
</resources>
