<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        >
 
<!--Put form controls here-->

<!--Indoor Unit-->

<TextView
    android:id="@+id/FormTitleTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:gravity="center"
    android:text="@string/FormTitle"
    android:textColor="@color/white"
    android:textSize="10pt" />

<EditText
    android:id="@+id/FormTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
</EditText>
 
<TextView
    android:id="@+id/IndoorUnitTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:textColor="@color/white"
    android:text="@string/IndoorUnit"
    android:textSize="10pt"
    android:gravity="center" >

</TextView>

<EditText
    android:id="@+id/IndoorMake"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Make"
    
    >
</EditText>

<EditText
    android:id="@+id/IndoorModel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Model"
    >
</EditText>

<EditText
    android:id="@+id/IndoorSerial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/SerialNumber"
    >
</EditText>


<!--Outdoor Unit-->

<TextView
    android:id="@+id/OutdoorUnitTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:text="@string/OutdoorUnit"
    android:textColor="@color/white"
    android:textSize="10pt"
    android:gravity="center" >

</TextView>

<EditText
    android:id="@+id/OutdoorMake"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Make"
    >
</EditText>

<EditText
    android:id="@+id/OutdoorModel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Model"
    >
</EditText>

<EditText
    android:id="@+id/OutdoorSerial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/SerialNumber"
    >
</EditText>

<!--Carbon Monoxide Reading-->

<TextView
    android:id="@+id/COReadingTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:gravity="center"
    android:text="@string/COReading"
    android:textColor="@color/white"
    android:textSize="10pt" >

</TextView>

<EditText
    android:id="@+id/SupplyAir"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/SupplyAir"
    >
</EditText>

<EditText
    android:id="@+id/FluGasses"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/FluGasses"
    >
</EditText>


<!--Temperature Rise-->

<TextView
    android:id="@+id/TemperatureRiseTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:text="@string/TemperatureRise"
    android:textColor="@color/white"
    android:textSize="10pt"
    android:gravity="center" >

</TextView>


<EditText
    android:id="@+id/IndoorTempRise"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/IndoorRise"
    >
</EditText>

<EditText
    android:id="@+id/OutdoorTempRise"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/OutdoorRise"
    >
</EditText>


<!--Operating Range-->

<TextView
    android:id="@+id/OperatingRangeTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:text="@string/OperatingRange"
    android:textColor="@color/white"
    android:textSize="10pt" 
    android:gravity="center">

</TextView>



<EditText
    android:id="@+id/IndoorHigh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/IndoorHigh"
    >
</EditText>

<EditText
    android:id="@+id/IndoorLow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/IndoorLow"
    >
</EditText>



<EditText
    android:id="@+id/OutdoorHigh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/OutdoorHigh"
    >
</EditText>

<EditText
    android:id="@+id/OutdoorLow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/OutdoorLow"
    >
</EditText>



<!--Gas Pressure-->

<TextView
    android:id="@+id/GasPressureTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:text="@string/GasPressure"
    android:textColor="@color/white"
    android:textSize="10pt"
    android:gravity="center" >

</TextView>

<EditText
    android:id="@+id/GasPressure"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/GP"
    >
    
</EditText>


<!--Filter Size-->

<TextView
    android:id="@+id/FilterSizeTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:text="@string/FilterSize"
    android:textColor="@color/white"
    android:textSize="10pt"
    android:gravity="center" >

</TextView>

<EditText
    android:id="@+id/FilterLength" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Length"
    >
</EditText>

<EditText
    android:id="@+id/FilterWidth" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Width"
    >
</EditText>

<EditText
    android:id="@+id/FilterHeight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Height"
    >
</EditText>

<LinearLayout
    android:id="@+id/saveButtonLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1" >

	    <View
	        android:id="@+id/view1"
	        android:layout_weight=".25"
	        android:layout_width="0dp"
	        android:layout_height="0dp" />
    
	    <Button
	        android:id="@+id/saveButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center|center_horizontal|center_vertical"
	        android:text="@string/Save"
	        android:layout_weight=".50" />
	    
	    <View
	        android:id="@+id/view2"
	        android:layout_weight=".25"
	        android:layout_width="0dp"
	        android:layout_height="0dp" />
	    
	    
	    
    
</LinearLayout>



    </LinearLayout>
</ScrollView>


